@@ -21,3 +21,15 @@
 
 * 并发编程与高并发解决方案系统学习研究：
 	> com.okali.concurrency
+	
+========================================================	
+
+#####JVM的GC日志的主要参数
+* -XX:+PrintGC 输出GC日志
+* -XX:+PrintGCDetails 输出GC的详细日志
+* -XX:+PrintGCTimeStamps 输出GC的时间戳（以基准时间的形式）
+* -XX:+PrintGCDateStamps 输出GC的时间戳（以日期的形式，如 2013-05-04T21:53:59.234+0800）
+* -XX:+PrintHeapAtGC 在进行GC的前后打印出堆的信息
+* -XX:+PrintGCApplicationStoppedTime // 输出GC造成应用暂停的时间
+* -Xloggc:../logs/gc.log 日志文件的输出路径
+* -XX:+HeapDumpOnOutOfMemoryError //发生OOM的时候自动dump堆栈方便分析
